style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

body {
  background-color: #eeeeee;
}

h1 {
  font-size: 2.5rem;
  padding: 1.5rem 0;
}

/* Header */

header {
  margin-bottom: 3rem;
}

.date-time-social {
  background-color: #fff;
  display: flex;
  justify-content: space-between;
  padding: 1rem 5rem;
}

.date-time-social p {
  margin: 0;
}

#current_date {
  color: #751f7c;
}

#current_time {
  background-color: #751f7c;
  color: white;
  font-weight: bold;
  margin-left: 0.5rem;
  padding: 0.1rem;
  border-radius: 2px;
}

.date-time-social a {
  color: #007bff;
  margin: 0 10px;
  text-decoration: none;
}

.date-time-social a:hover {
  color: black;
  text-decoration: underline;
}

.top-topics {
  background-color: #fff;
  padding: 0.5rem 5rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.top-topics p {
  margin: 0 1rem;
  padding: 0;
  font-weight: bold;
}

.top-topics a {
  margin: 0 0.5rem;
  background-color: #f3eeee;
  color: #751f7c;
  padding: 5px;
  text-decoration: none;
}

.top-topics a:hover {
  background-color: #751f7c;
  color: white;
}

/* Nav bar */

nav {
  background-color: #751f7c;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem 5rem;
}

nav img {
  height: 75px;
}

nav a {
  color: white;
  text-decoration: none;
  padding: 0 1rem;
}

nav a:hover {
  text-decoration: underline;
}

.desktop-menu {
  display: flex;
  align-items: center;
}

#open-mobile-menu {
  background-image: url("/images/icons/menu.svg");
}

#open-mobile-search,
#open-desktop-search {
  background-image: url("/images/icons/search.svg");
  background-size: contain;
}

.desktop-menu button {
  background-color: transparent;
  background-position: center;
  background-size: 25%;
  background-repeat: no-repeat;
  height: 25px;
  width: 25px;
  border: none;
  transition: ease-in-out 0.3s;
}

.desktop-menu button:hover {
  cursor: pointer;
  background-color: #002954;
}

.mobile-buttons {
  display: none;
}

/* Search bar */

#search-bar {
  height: 5rem;
  background: #000;
  justify-content: center;
  align-items: center;
}

#search-bar input {
  width: 50%;
  height: 2.5rem;
  padding: 0 1rem;
}

#search-bar button {
  height: 2.5rem;
  width: 2.5rem;
  background: url("/images/icons/search.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-color: #751f7c;
  border: none;
  border-radius: 0 5px 5px 0;
}

#search-bar button:hover {
  background-color: #002954;
  cursor: pointer;
}

/* Mobile menu */

#mobile-menu {
  background-color: #751f7c;
  flex-wrap: wrap;
}

#mobile-menu a {
  color: white;
  width: 100%;
  padding: 1rem 3rem;
  text-decoration: none;
}

#mobile-menu a:hover {
  text-decoration: underline;
}

/* Banner ad */
.banner-ad {
  margin: 2rem 0;
  display: flex;
  justify-content: center;
  width: 100%;
}

.banner-ad img {
  max-width: 100%;
}

/* Homepage posts */
main {
  width: 66%;
  padding: 0 3rem;
  float: left;
  margin-bottom: 2rem;
}

article {
  display: flex;
  height: 350px;
  margin-bottom: 2rem;
  background-color: white;
  border: 1px solid #dddcdc;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
}

article > div {
  height: 100%;
  width: 50%;
  padding: 1rem;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-clip: content-box;
}

article .tags {
  margin-top: 2rem;
}

.tags > a {
  text-decoration: none;
  color: #fff;
  background-color: #751f7c;
  border-radius: 3px;
  padding: 3px;
}

.meta-info {
  margin-bottom: 0.5rem;
}

.meta-info > a {
  color: #757575;
  margin-right: 10px;
}

.meta-info > a:hover {
  color: #751f7c;
}

article a {
  color: #000;
  text-decoration: none;
}

article h4 {
  font-size: 24px;
  margin: 1rem 0;
  text-decoration: underline;
}

article h4:hover {
  color: #751f7c;
}

/* Pagination */

.pages {
  display: flex;
  justify-content: center;
  margin-bottom: 5rem;
}

.pages a {
  background-color: #fff;
  color: #757575;
  font-size: 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  margin: 0 0.5rem;
  text-decoration: none;
  border-radius: 5px;
  transition: ease-in-out 0.3s;
}

.pages a:hover {
  background-color: #751f7c;
  color: #fff;
}

/* Aside */
aside {
  width: 33%;
  padding-right: 5rem;
  float: right;
}

aside div {
  background-color: white;
  margin-bottom: 3rem;
}

aside h6 {
  background-color: #751f7c;
  color: white;
  font-size: 18px;
  line-height: 40px;
  font-weight: 600;
  margin: 0;
  padding: 0 8px 0 15px;
  position: relative;
  width: auto;
  height: 40px;
  display: inline-block;
}

aside ul {
  padding: 1rem;
  display: flex;
  flex-wrap: wrap;
  list-style: none;
}

aside ul li {
  margin-bottom: 20px;
}

aside ul li a {
  padding: 5px;
  border-radius: 3px;
  color: #751f7c;
  background-color: #f3eeee;
  text-decoration: none;
  margin-right: 1rem;
  transition: ease-in-out 0.3s;
}

aside ul li a:hover {
  color: white;
  background-color: #751f7c;
}

aside h6::before {
  width: 0;
  position: absolute;
  right: -30px;
  top: 0px;
  height: 0;
  border-style: solid;
  border-width: 40px 0 0px 30px;
  content: "";
  border-color: transparent transparent transparent #751f7c;
}

/* Story page */

.story {
  background-color: #fff;
  padding: 1rem 3rem;
}

.story-meta-info {
  width: 100%;
  display: flex;
  margin-bottom: 5rem;
  align-items: center;
}

.story-meta-info > div {
  width: 100%;
}

.author-profile-picture {
  max-height: 3rem;
  margin-right: 2rem;
  border-radius: 50%;
}

.meta-top-container {
  border-bottom: 1px solid gray;
  padding-bottom: 0.5rem;
}

.meta-top-container > a {
  text-decoration: none;
  color: #000;
  font-weight: bold;
}

.meta-top-container > a:hover {
  color: #234bd7;
}

.meta-bottom-container {
  padding-top: 0.5rem;
  display: flex;
  flex-wrap: wrap;
}

.meta-published-date {
  margin-right: 1rem;
  margin-bottom: 1rem;
}

.story-content > p,
.story-content ul,
.story-content ol,
.story-content a {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.2rem;
}

.story-content ul,
.story-content ol {
  margin-left: 3rem;
}

.story-content h2 {
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 2rem;
}

.story-content a {
  color: #007bff;
}

.story-content img {
  max-width: 100%;
}

.story-social {
  display: flex;
  justify-content: end;
  height: 5rem;
  width: 100%;
  margin-top: 50px;
  text-align: right;
}

/* Story share icons */

.fb-icon,
.tw-icon,
.em-icon,
.li-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 35px;
  height: 35px;
  margin-right: 0.5em;
}

.fb-icon {
  background-color: #3b5998;
}

.tw-icon {
  background-color: #1da1f2;
}

.em-icon {
  background-color: #000;
}

.li-icon {
  background-color: #cd201f;
}

.fb-icon img,
.tw-icon img,
.em-icon img,
.li-icon img {
  height: 25px;
  width: 25px;
}

/* About the author */

.about-the-author {
  border-top: 1px solid gray;
  padding-top: 1rem;
  display: flex;
  align-items: center;
}

.about-the-author > .author-profile-picture {
  max-height: 5rem;
}

.about-the-author a {
  text-decoration: none;
  color: #000;
  font-weight: bold;
}

.about-the-author a:hover {
  cursor: pointer;
  color: #234bd7;
}

.about-the-author p {
  margin: 1rem 0;
}

/* Related stories */
.related-stories-section {
  background-color: #fff;
  padding: 1rem;
  margin-top: 2rem;
  margin-bottom: 4rem;
}

.related-stories-section > h4 {
  background-color: #751f7c;
  color: white;
  font-size: 18px;
  line-height: 40px;
  font-weight: 600;
  margin: 0;
  padding: 0 8px 0 15px;
  position: relative;
  width: auto;
  height: 40px;
  display: inline-block;
}

.related-stories-section > h4::before {
  width: 0;
  position: absolute;
  right: -30px;
  top: 0px;
  height: 0;
  border-style: solid;
  border-width: 40px 0 0px 30px;
  content: "";
  border-color: transparent transparent transparent #751f7c;
}

.related-stories-items {
  margin-top: 2rem;
  display: flex;
  justify-content: space-evenly;
}

.related-story {
  background-position: center;
  height: 250px;
  width: 100%;
  max-width: 30%;
  display: flex;
  flex-direction: column;
  padding-top: 80px;
  padding-left: 1rem;
  padding-right: 1rem;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3);
}

.related-story > .tags {
  margin-bottom: 0.5rem;
}

.related-story > .tags > a {
  margin-right: 0.5rem;
}

.related-story > a {
  color: white;
  text-decoration-color: white;
  margin-bottom: 1rem;
}

.related-story h4 {
  color: white;
  font-size: 24px;
}

.related-meta {
  display: flex;
}

.related-meta p,
.related-meta a {
  color: white;
  margin-right: 2rem;
}

/* Footer */

footer {
  clear: both;
}

.footer-social,
.footer-links {
  padding: 3rem;
}

.footer-social {
  display: flex;
  align-items: center;
  background-color: #751f7c;
}

.footer-social h6 {
  color: #fff;
  font-size: 18px;
}

.footer-facebook,
.footer-twitter,
.footer-instagram,
.footer-youtube {
  display: flex;
  color: white;
  width: 35px;
  height: 35px;
  border-radius: 5px;
  margin: 0 10px;
  justify-content: center;
  align-items: center;
}

.footer-facebook img,
.footer-twitter img,
.footer-instagram img,
.footer-youtube img {
  width: 20px;
}

.footer-facebook {
  background-color: #3b5998;
}

.footer-twitter {
  background-color: #1da1f2;
}

.footer-instagram {
  background: radial-gradient(
      circle farthest-corner at 32% 106%,
      #ffe17d 0,
      #ffcd69 10%,
      #fa9137 28%,
      #eb4141 42%,
      transparent 82%
    ),
    linear-gradient(135deg, #234bd7 12%, #c33cbe 58%);
}

.footer-youtube {
  background: #cd201f;
}

.footer-links {
  color: #aaaed1;
  background-color: #090818;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.footer-links > div {
  display: flex;
  flex-wrap: wrap;
}

.footer-links a {
  color: #aaaed1;
  margin-left: 2rem;
  text-wrap: nowrap;
}

.footer-links a:hover {
  color: #fff;
}

/* ----- Mobile styling ----- */

@media only screen and (max-width: 1350px) {
  .footer-links > div {
    margin-top: 20px;
  }
}

@media only screen and (max-width: 1150px) {
  nav {
    padding: 0;
  }
}

@media only screen and (max-width: 990px) {
  .mobile-buttons {
    display: block;
  }

  .mobile-buttons button {
    width: 35px;
    height: 35px;
    margin-right: 1.5rem;
    background-position: center;
    background-repeat: no-repeat;
    background-color: transparent;
    border: none;
    transition: ease-in-out 0.3s;
  }

  .mobile-buttons button:hover {
    background-color: #002954;
    cursor: pointer;
  }

  .desktop-menu {
    display: none;
  }

  main {
    width: 100%;
  }

  aside {
    width: 100%;
    padding: 0 3rem;
  }

  .related-stories-section {
    margin-bottom: 2rem;
  }

  .related-stories-items {
    flex-direction: column;
  }

  .related-story {
    max-width: 100%;
    background-size: cover;
    margin-bottom: 1rem;
  }

  .footer-links {
    justify-content: center;
  }

  .footer-links p {
    text-align: center;
  }

  .footer-links > div {
    justify-content: center;
    margin-top: 20px;
  }

  .footer-links a {
    width: 100%;
    margin-top: 10px;
    text-align: center;
  }
}

@media only screen and (max-width: 768px) {
  .date-time-social {
    padding: 1rem;
  }

  main,
  .top-topics {
    padding: 1rem;
  }

  article {
    flex-wrap: wrap;
    height: 600px;
  }

  article > div {
    height: 300px;
    width: 100%;
    padding: 1rem;
  }
}

@media only screen and (max-width: 490px) {
  .date-time-social {
    flex-wrap: wrap;
    padding-bottom: 0;
  }

  .date-time-social div {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin-bottom: 0.5rem;
  }

  nav a {
    padding: 0 0.5rem;
  }

  .mobile-buttons button {
    margin-right: 0.5rem;
  }
}

